Fix notification service fix overwritten in merge